--- a/fronted/vercel.json
+++ b/fronted/vercel.json
@@ -1,21 +1,5 @@
 {
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "framework": "vite",
-  "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/[^.]+",
-      "dest": "/",
-      "status": 200
-    }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
-} 
+}
